updated all to work with OpenSearch; tests still need updating
Signed-off-by: Mark Cohen <markcoh@amazon.com>

--- a/notebooks/opensearch/osc-blog/osc-blog.ipynb
+++ b/notebooks/opensearch/osc-blog/osc-blog.ipynb
@@ -16,8 +16,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GET http://es-learn-to-rank.labs.o19s.com/blog.jsonl\n",
-      "GET http://es-learn-to-rank.labs.o19s.com/osc_judgments.txt\n"
+      "data/blog.jsonl already exists\n",
+      "data/osc_judgments.txt already exists\n"
      ]
     }
    ],
@@ -81,9 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:9201/_ltr; <OpenSearch([{'host': 'localhost', 'port': 9201}])>\n"
+     ]
+    }
+   ],
    "source": [
     "from ltr.client import OpenSearchClient\n",
     "client=OpenSearchClient()"
@@ -98,15 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created index blog [Status: 200]\n",
-      "Streaming Bulk index DONE blog [Status: 201]\n"
+      "Index blog already exists. Use `force = True` to delete and recreate\n"
      ]
     }
    ],
@@ -124,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -289,14 +296,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recognizing 47 queries in: data/osc_judgments.txt\n"
+      "Recognizing 47 queries\n"
      ]
     }
    ],
@@ -325,14 +332,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recognizing 47 queries in: data/osc_judgments.txt\n",
+      "Recognizing 47 queries\n",
       "grade:4 qid:1 (solr) docid:4036602523\n",
       "grade:4 qid:1 (solr) docid:2349740828\n",
       "grade:4 qid:1 (solr) docid:2307460466\n",
@@ -831,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +847,7 @@
      "text": [
       "/var/folders/33/jx0mw87156q2hmtrr_r82s7r0000gs/T/RankyMcRankFace.jar already exists\n",
       "Running java -jar /var/folders/33/jx0mw87156q2hmtrr_r82s7r0000gs/T/RankyMcRankFace.jar -ranker 6 -shrinkage 0.1 -metric2t NDCG@10 -tree 50 -bag 1 -leaf 10 -frate 1.0 -srate 1.0 -train /var/folders/33/jx0mw87156q2hmtrr_r82s7r0000gs/T/training.txt -save data/test_model.txt \n",
-      "Delete model test: 200\n",
+      "Delete model test: 404\n",
       "Created Model test [Status: 201]\n",
       "Model saved\n"
      ]
@@ -859,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -877,9 +884,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'var' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mvar\u001b[49m\u001b[38;5;241m/\u001b[39mfolders\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m33\u001b[39m\u001b[38;5;241m/\u001b[39mjx0mw87156q2hmtrr_r82s7r0000gs\u001b[38;5;241m/\u001b[39mT\u001b[38;5;241m/\u001b[39mRankyMcRankFace\u001b[38;5;241m.\u001b[39mjar()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'var' is not defined"
+     ]
+    }
+   ],
    "source": [
     "/var/folders/33/jx0mw87156q2hmtrr_r82s7r0000gs/T/RankyMcRankFace.jar"
    ]
@@ -893,48 +912,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"beer\", \"keywordsList\": [\"beer\"]}, \"model\": \"test\"}}}\n",
-      "Holiday Open House at OSC &#8211; Come Share in the Fun \n",
-      "2.1068661 \n",
-      "https://opensourceconnections.com/blog/2013/12/11/holiday-open-house-at-osc-come-share-in-the-fun/ \n",
-      "john-berryman \n",
-      "['blog', 'solr'] \n",
-      "2013-12-11T00:00:00-0500 \n",
+      "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"haystack ml\", \"keywordsList\": [\"haystack ml\"]}, \"model\": \"test\"}}}\n",
+      "{'size': 5, 'query': {'sltr': {'params': {'keywords': 'haystack ml', 'keywordsList': ['haystack ml']}, 'model': 'test'}}}\n",
+      "Scott Stults to Speak on Solr Security at the Solr and Text Analytics Conference \n",
+      "2.0238843 \n",
+      "https://opensourceconnections.com/blog/2011/03/21/scott-stults-to-speak-on-solr-security-at-the-solr-and-text-analytics-conference/ \n",
+      "jason-hull \n",
+      "['blog', 'Conference', 'Government', 'News', 'Speaking'] \n",
+      "2011-03-21T00:00:00-0400 \n",
       "---------------------------------------\n",
-      "Scrum War Stories is coming! \n",
-      "-0.28854778 \n",
-      "https://opensourceconnections.com/blog/2007/05/03/scrum-war-stories-is-coming/ \n",
+      "Recap of Activate 2018 \n",
+      "0.88978434 \n",
+      "https://opensourceconnections.com/blog/2018/11/09/recap-of-activate-2018/ \n",
+      "elizabeth-haubert \n",
+      "['blog', 'Solr', 'Machine-learning'] \n",
+      "2018-11-09T00:00:00-0500 \n",
+      "---------------------------------------\n",
+      "Haystack - The Search Relevance Conference. \n",
+      "0.78783745 \n",
+      "https://opensourceconnections.com/blog/2019/04/24/haystack/ \n",
       "eric-pugh \n",
-      "['blog', 'Community', 'News'] \n",
-      "2007-05-03T00:00:00-0400 \n",
+      "['events'] \n",
+      "2019-04-24T00:00:00-0400 \n",
       "---------------------------------------\n",
-      "4 Things Google is doing internally to foster collaboration and innovation \n",
-      "-0.45890632 \n",
-      "https://opensourceconnections.com/blog/2008/03/13/4-things-google-is-doing-internally-to-foster-collaboration-and-innovation/ \n",
-      "arin-sime \n",
-      "['blog', 'Opinion'] \n",
-      "2008-03-13T00:00:00-0400 \n",
+      "Multi-Level Security in Solr \n",
+      "0.6376177 \n",
+      "https://opensourceconnections.com/blog/2011/06/17/multi-level-security-in-solr/ \n",
+      "scott-stults \n",
+      "['blog', 'Conference', 'Government', 'solr', 'Speaking'] \n",
+      "2011-06-17T00:00:00-0400 \n",
       "---------------------------------------\n",
-      "Trip Report: Shenandoah Ruby User Group \n",
-      "-0.45890632 \n",
-      "https://opensourceconnections.com/blog/2008/04/30/trip-report-shenandoah-ruby-user-group/ \n",
-      "eric-pugh \n",
-      "['blog', 'Code', 'Community', 'Speaking'] \n",
-      "2008-04-30T00:00:00-0400 \n",
-      "---------------------------------------\n",
-      "Building Suggest-As-You-Type with Carrot2 Clustering \n",
-      "-2.0346022 \n",
-      "https://opensourceconnections.com/blog/2013/02/14/building-suggest-as-you-type-with-carrot2-clustering/ \n",
-      "john-berryman \n",
-      "['blog', 'solr'] \n",
-      "2013-02-14T00:00:00-0500 \n",
+      "Haystack 2019 day 1 - grab your popcorn, it's Relevance Avengers time \n",
+      "0.07273796 \n",
+      "https://opensourceconnections.com/blog/2019/05/07/haystack-2019-day1/ \n",
+      "charlie-hull \n",
+      "['blog', 'Relevance'] \n",
+      "2019-05-07T00:00:00-0400 \n",
       "---------------------------------------\n"
      ]
     }
@@ -946,7 +966,7 @@
     "}\n",
     "\n",
     "from ltr import search\n",
-    "search(client, \"beer\", modelName='test', \n",
+    "search(client, \"haystack ml\", modelName='test', \n",
     "       index='blog', fields=blog_fields)"
    ]
   },
