--- a/notebooks/opensearch/tmdb/netfix movies-random-forests.ipynb
+++ b/notebooks/opensearch/tmdb/netfix movies-random-forests.ipynb
@@ -11,7 +11,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:9201/_ltr; <OpenSearch([{'host': 'localhost', 'port': 9201}])>\n"
+     ]
+    }
+   ],
    "source": [
     "from ltr.client import OpenSearchClient\n",
     "client = OpenSearchClient()"
@@ -247,10 +255,16 @@
       "Running java -jar /var/folders/33/jx0mw87156q2hmtrr_r82s7r0000gs/T/RankyMcRankFace.jar -ranker 8 -shrinkage 0.1 -metric2t NDCG@10 -tree 100 -bag 1 -leaf 4 -frate 0.5 -srate 1.0 -train /var/folders/33/jx0mw87156q2hmtrr_r82s7r0000gs/T/training.txt -save data/title_rf_model.txt  -feature /var/folders/33/jx0mw87156q2hmtrr_r82s7r0000gs/T/features.txt -kcv 5 \n",
       "\n",
       "Impact of each feature on the model\n",
-      "title_fuzzy - 58.98475855415306\n",
-      "title_bm25 - 2.270030212189714\n",
-      "overview_bm25 - 0.5272996580514282\n",
-      "Test NDCG@10 0.8597\n"
+      "title_phrase - 24.48739439080939\n",
+      "title_fuzzy - 1.1584810388957791\n",
+      "title_bm25 - 1.0643587306951177\n",
+      "overview_bm25 - 0.15640238901614717\n",
+      "title - 0.053865977190592544\n",
+      "release_year - 0.017010519863431786\n",
+      "overview_phrase_bm25 - 0.004244349943165917\n",
+      "coll_name_bm25 - 0.0\n",
+      "coll_name_phrase_bm25 - 0.0\n",
+      "Test NDCG@10 0.8843\n"
      ]
     }
    ],
