--- a/notebooks/opensearch/tmdb/raw-opensearch-commands.ipynb
+++ b/notebooks/opensearch/tmdb/raw-opensearch-commands.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:9201/_ltr; <OpenSearch([{'host': 'localhost', 'port': 9201}])>\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import json\n",
@@ -12,12 +20,13 @@
     "from ltr.client import OpenSearchClient\n",
     "client = OpenSearchClient()\n",
     "\n",
-    "host = client.get_host()"
+    "host = client.get_host()\n",
+    "port = 9201"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -25,21 +34,7 @@
      "output_type": "stream",
      "text": [
       "data/tmdb.json already exists\n",
-      "Created index tmdb [Status: 200]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 27846/27846 [02:13<00:00, 208.92it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Streaming Bulk index DONE tmdb [Status: 201]\n"
+      "Index tmdb already exists. Use `force = True` to delete and recreate\n"
      ]
     }
    ],
@@ -66,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -78,15 +73,17 @@
     },
     {
      "data": {
-      "text/plain": "<Response [200]>"
+      "text/plain": [
+       "<Response [200]>"
+      ]
      },
-     "execution_count": 4,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "url = 'http://{}:9201/_ltr/'.format(host)\n",
+    "url = f'http://{host}:{port}/_ltr/'\n",
     "print(url)\n",
     "requests.delete(url)"
    ]
@@ -100,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -112,15 +109,16 @@
     },
     {
      "data": {
-      "text/plain": "<Response [200]>"
+      "text/plain": [
+       "<Response [200]>"
+      ]
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "url = 'http://{}:9201/_ltr/'.format(host)\n",
     "print(url)\n",
     "requests.put(url)"
    ]
@@ -136,21 +134,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://localhost:9200/_ltr/_featureset/my_feature_set\n"
+      "http://localhost:9201/_ltr/_featureset/my_feature_set\n"
      ]
     },
     {
      "data": {
-      "text/plain": "<Response [400]>"
+      "text/plain": [
+       "<Response [201]>"
+      ]
      },
-     "execution_count": 6,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,9 +191,9 @@
     "   }\n",
     "}\n",
     "\n",
-    "url = 'http://{}:9200/_ltr/_featureset/my_feature_set'.format(host)\n",
-    "print(url)\n",
-    "requests.put(url, json=feature_set)\n"
+    "feature_set_url = f'{url}_featureset/my_feature_set'\n",
+    "print(feature_set_url)\n",
+    "requests.put(feature_set_url, json=feature_set)\n"
    ]
   },
   {
@@ -225,25 +225,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://localhost:9200/tmdb/_search\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'hits'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
-      "\u001B[0;32m/var/folders/33/jx0mw87156q2hmtrr_r82s7r0000gs/T/ipykernel_22620/1296524875.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m     35\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0murl\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     36\u001B[0m \u001B[0mresp\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mrequests\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mget\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0murl\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mjson\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0msearch_with_log\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mjson\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 37\u001B[0;31m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mjson\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mdumps\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mresp\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m'hits'\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m'hits'\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m0\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mindent\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;36m2\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[0;31mKeyError\u001B[0m: 'hits'"
+      "http://localhost:9201/tmdb/_search\n",
+      "{\n",
+      "  \"_index\": \"tmdb\",\n",
+      "  \"_id\": \"7555\",\n",
+      "  \"_score\": 0.0,\n",
+      "  \"_source\": {\n",
+      "    \"id\": \"7555\",\n",
+      "    \"title\": \"Rambo\",\n",
+      "    \"overview\": \"When governments fail to act on behalf of captive missionaries, ex-Green Beret John James Rambo sets aside his peaceful existence along the Salween River in a war-torn region of Thailand to take action.  Although he's still haunted by violent memories of his time as a U.S. soldier during the Vietnam War, Rambo can hardly turn his back on the aid workers who so desperately need his help.\",\n",
+      "    \"tagline\": \"Heroes never die... They just reload.\",\n",
+      "    \"directors\": [\n",
+      "      \"Sylvester Stallone\"\n",
+      "    ],\n",
+      "    \"cast\": \"Sylvester Stallone Julie Benz Matthew Marsden Reynaldo Gallegos Jake La Botz Tim Kang Maung Maung Khin Paul Schulze Ken Howard Graham McTavish Cameron Pearson Thomas Peterson Tony Skarberg James With Kasikorn Niyompattana Shaliew 'Lek' Bamrungbun\",\n",
+      "    \"genres\": [\n",
+      "      \"Action\",\n",
+      "      \"Thriller\"\n",
+      "    ],\n",
+      "    \"release_date\": \"2008-01-24\",\n",
+      "    \"release_year\": \"2008\",\n",
+      "    \"poster_path\": \"https://image.tmdb.org/t/p/w185/ec1m7YgBYb4os06OSNW3QBaNYqZ.jpg\",\n",
+      "    \"vote_average\": 6.4,\n",
+      "    \"vote_count\": 770,\n",
+      "    \"collection_name\": \"Rambo Collection\"\n",
+      "  },\n",
+      "  \"fields\": {\n",
+      "    \"_ltrlog\": [\n",
+      "      {\n",
+      "        \"ltr_features\": [\n",
+      "          {\n",
+      "            \"name\": \"title_bm25\",\n",
+      "            \"value\": 11.657399\n",
+      "          },\n",
+      "          {\n",
+      "            \"name\": \"overview_bm25\",\n",
+      "            \"value\": 10.083591\n",
+      "          }\n",
+      "        ]\n",
+      "      }\n",
+      "    ]\n",
+      "  },\n",
+      "  \"matched_queries\": [\n",
+      "    \"logged_features\"\n",
+      "  ]\n",
+      "}\n"
      ]
     }
    ],
@@ -281,9 +314,9 @@
     "  }\n",
     "}\n",
     "\n",
-    "url = 'http://{}:9200/tmdb/_search'.format(host)\n",
-    "print(url)\n",
-    "resp = requests.get(url, json=search_with_log).json()\n",
+    "search_with_log_url = f'http://{host}:{port}/tmdb/_search'\n",
+    "print(search_with_log_url)\n",
+    "resp = requests.get(search_with_log_url, json=search_with_log).json()\n",
     "print(json.dumps(resp['hits']['hits'][0], indent=2))"
    ]
   },
@@ -334,9 +367,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:9201/_ltr/_featureset/my_feature_set/_createmodel\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'_index': '.ltrstore',\n",
+       " '_id': 'model-my_model',\n",
+       " '_version': 1,\n",
+       " 'result': 'created',\n",
+       " 'forced_refresh': True,\n",
+       " '_shards': {'total': 1, 'successful': 1, 'failed': 0},\n",
+       " '_seq_no': 1,\n",
+       " '_primary_term': 1}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = \"\"\"## LambdaMART\n",
     "## No. of trees = 10\n",
@@ -443,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,9 +522,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:9201/tmdb/_search\n",
+      "Rambo: First Blood Part II\n",
+      "First Blood\n",
+      "Rambo III\n",
+      "Rambo\n",
+      "Black Mirror: White Christmas\n",
+      "The Brave-Hearted Will Take the Bride\n",
+      "The Shawshank Redemption\n",
+      "Your Name.\n",
+      "The Godfather\n",
+      "Dangal\n"
+     ]
+    }
+   ],
    "source": [
     "print(url)\n",
     "for hit in resp['hits']['hits']:\n",
@@ -483,7 +559,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -497,7 +573,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
