--- a/notebooks/click models.ipynb
+++ b/notebooks/click models.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "              (4, 0.0)]})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        " 0.44523038207622834]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        " (2, 4.076400940523653e-131)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,9 +186,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 4, 3, 1, 2, 9, 7]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from ltr.helpers.tau import tau\n",
     "from ltr.helpers.tau import avg_tau\n",
@@ -199,9 +210,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 3, 0, 1, 9, 7, 2]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rambo2 = just_doc_ids(pbm_judgments['rambo'])\n",
     "rambo2\n"
@@ -209,18 +231,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.21632653061224488"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "avg_tau(rambo1, rambo2, at=7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 6, 8, 7, 3, 1, 5, 2, 0, 4]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "star_trek1 = just_doc_ids(coec_judgments['star trek'])\n",
     "star_trek1"
@@ -228,9 +272,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 6, 8, 7, 3, 5, 1, 2, 0, 4]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "star_trek2 = just_doc_ids(pbm_judgments['star trek'])\n",
     "star_trek2"
@@ -238,9 +293,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9066666666666666"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "avg_tau(star_trek1, star_trek2, at=10)"
    ]
@@ -258,9 +324,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function ltr.clickmodels.ubm.Model.__init__.<locals>.<lambda>()>,\n",
+       "            {('rambo', 2): 0.0655509140827497,\n",
+       "             ('star trek', 5): 0.0,\n",
+       "             ('rambo', 1): 1.0,\n",
+       "             ('star trek', 2): 1.0})"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from ltr.clickmodels.ubm import user_browse_model\n",
     "\n",
@@ -279,9 +360,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function ltr.clickmodels.ubm.Model.__init__.<locals>.<lambda>()>,\n",
+       "            {(0, 1): 0.0025465408240250265,\n",
+       "             (-1, 0): 0.9999999999999993,\n",
+       "             (-1, 1): 1.0})"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.ranks"
    ]
@@ -297,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,9 +402,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function ltr.clickmodels.cascade.Model.__init__.<locals>.<lambda>()>,\n",
+       "            {('rambo', 1): 0.5,\n",
+       "             ('star trek', 5): 0.0,\n",
+       "             ('star trek', 2): 0.5,\n",
+       "             ('rambo', 2): 0.0,\n",
+       "             ('rambo', 3): 1.0,\n",
+       "             ('star trek', 1): 0.0,\n",
+       "             ('star trek', 3): 0.0,\n",
+       "             ('star trek', 9): 1.0,\n",
+       "             ('rambo', 9): 0.0,\n",
+       "             ('star trek', 6): 1.0,\n",
+       "             ('rambo', 7): 0.0,\n",
+       "             ('rambo', 4): 1.0,\n",
+       "             ('star trek', 8): 1.0,\n",
+       "             ('star trek', 7): 1.0})"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.attracts"
    ]
@@ -325,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,18 +455,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function ltr.clickmodels.sdbn.Model.__init__.<locals>.<lambda>()>,\n",
+       "            {('rambo', 3): 1.0,\n",
+       "             ('rambo', 2): 0.0,\n",
+       "             ('rambo', 1): 0.5,\n",
+       "             ('star trek', 3): 0.75,\n",
+       "             ('star trek', 2): 0.25,\n",
+       "             ('star trek', 5): 0.5,\n",
+       "             ('star trek', 9): 1.0,\n",
+       "             ('star trek', 1): 0.5,\n",
+       "             ('rambo', 0): 1.0,\n",
+       "             ('rambo', 9): 0.0,\n",
+       "             ('star trek', 6): 1.0,\n",
+       "             ('rambo', 4): 1.0,\n",
+       "             ('rambo', 7): 0.0,\n",
+       "             ('star trek', 8): 1.0,\n",
+       "             ('star trek', 4): 0.0,\n",
+       "             ('star trek', 7): 1.0})"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.attracts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function ltr.clickmodels.sdbn.Model.__init__.<locals>.<lambda>()>,\n",
+       "            {('rambo', 3): 1.0,\n",
+       "             ('rambo', 1): 0.0,\n",
+       "             ('star trek', 3): 1.0,\n",
+       "             ('star trek', 2): 0.0,\n",
+       "             ('star trek', 5): 0.0,\n",
+       "             ('star trek', 9): 1.0,\n",
+       "             ('star trek', 1): 1.0,\n",
+       "             ('rambo', 0): 1.0,\n",
+       "             ('star trek', 6): 0.0,\n",
+       "             ('rambo', 4): 1.0,\n",
+       "             ('star trek', 8): 0.0,\n",
+       "             ('star trek', 7): 0.0})"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.satisfacts"
    ]
