--- a/notebooks/conversion-augmented-click-models.ipynb
+++ b/notebooks/conversion-augmented-click-models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,9 +44,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function ltr.clickmodels.pbm.Model.__init__.<locals>.<lambda>()>,\n",
+       "            {('rambo', 2): 0.30524892749163485,\n",
+       "             ('rambo', 3): 0.9997889680727174,\n",
+       "             ('rambo', 0): 0.9999838627093206,\n",
+       "             ('rambo', 1): 0.5081046628637683,\n",
+       "             ('rambo', 4): 0.500867466656602,\n",
+       "             ('rambo', 7): 4.1166079834203487e-75,\n",
+       "             ('rambo', 8): 4.200081298115326e-84,\n",
+       "             ('rambo', 9): 4.1166079834203487e-75,\n",
+       "             ('rambo', 6): 4.1166079834203487e-75})"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from ltr.clickmodels.pbm import position_based_model\n",
     "model = position_based_model(sessions, rounds=50)\n",
@@ -55,18 +75,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.9976284686244448,\n",
+       " 0.9992604598191843,\n",
+       " 0.6440993392340741,\n",
+       " 0.3000299014351479]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.ranks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({('rambo', 1): 0.35567326400463783,\n",
+       "         ('rambo', 2): 0.17442795856664847,\n",
+       "         ('rambo', 3): 0.39991558722908704,\n",
+       "         ('rambo', 0): 0.48570644760167003,\n",
+       "         ('rambo', 4): 0.3881722866588665,\n",
+       "         ('rambo', 7): 1.6466431933681395e-75,\n",
+       "         ('rambo', 8): 2.940056908680728e-84,\n",
+       "         ('rambo', 9): 2.0583039917101744e-75,\n",
+       "         ('rambo', 6): 2.0583039917101744e-75})"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from ltr.clickmodels.conversion import conv_aug_attracts\n",
     "satisfacts = conv_aug_attracts(model.attracts, sessions, doc_costs)\n",
@@ -75,9 +128,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {'rambo': [(0, 0.48570644760167003),\n",
+       "              (3, 0.39991558722908704),\n",
+       "              (4, 0.3881722866588665),\n",
+       "              (1, 0.35567326400463783),\n",
+       "              (2, 0.17442795856664847),\n",
+       "              (9, 2.0583039917101744e-75),\n",
+       "              (6, 2.0583039917101744e-75),\n",
+       "              (7, 1.6466431933681395e-75),\n",
+       "              (8, 2.940056908680728e-84)]})"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def by_query(judgment_dict):\n",
     "    from collections import defaultdict\n",
@@ -103,18 +176,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {'rambo': [(0, 0.9999838627093206),\n",
+       "              (3, 0.9997889680727174),\n",
+       "              (1, 0.5081046628637683),\n",
+       "              (4, 0.500867466656602),\n",
+       "              (2, 0.30524892749163485),\n",
+       "              (7, 4.1166079834203487e-75),\n",
+       "              (9, 4.1166079834203487e-75),\n",
+       "              (6, 4.1166079834203487e-75),\n",
+       "              (8, 4.200081298115326e-84)]})"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s_attracts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6666666666666666"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from ltr.helpers.tau import tau, avg_tau\n",
     "\n",
@@ -131,7 +235,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -145,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
