--- a/notebooks/exercises/Feature Sets and Feature Logs.ipynb
+++ b/notebooks/exercises/Feature Sets and Feature Logs.ipynb
@@ -17,9 +17,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name '______' from 'ltr.client' (/Users/markcoh/IdeaProjects/OpenSearchWork/hello-ltr/ltr/client/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mltr\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mltr\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mclient\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ______\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name '______' from 'ltr.client' (/Users/markcoh/IdeaProjects/OpenSearchWork/hello-ltr/ltr/client/__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "import ltr\n",
     "from ltr.client import ______"
@@ -141,7 +153,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -155,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
