--- a/notebooks/opensearch/tmdb/gonna need a bigger bot (OpenSearch).ipynb
+++ b/notebooks/opensearch/tmdb/gonna need a bigger bot (OpenSearch).ipynb
@@ -32,7 +32,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:9201/_ltr; <OpenSearch([{'host': 'localhost', 'port': 9201}])>\n"
+     ]
+    }
+   ],
    "source": [
     "from ltr.client import OpenSearchClient\n",
     "client = OpenSearchClient()"
@@ -76,9 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index tmdb already exists. Use `force = True` to delete and recreate\n"
+     ]
+    }
+   ],
    "source": [
     "from ltr.index import rebuild\n",
     "from ltr.helpers.movies import indexable_movies\n",
@@ -105,9 +121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed Default LTR feature store [Status: 200]\n",
+      "Initialize Default LTR feature store [Status: 200]\n",
+      "Create genome feature set [Status: 201]\n"
+     ]
+    }
+   ],
    "source": [
     "client.reset_ltr(index='tmdb')\n",
     "\n",
@@ -162,9 +188,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recognizing 1128 queries\n"
+     ]
+    }
+   ],
    "source": [
     "from ltr.log import FeatureLogger\n",
     "from ltr.judgments import judgments_open\n",
@@ -191,9 +225,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/33/jx0mw87156q2hmtrr_r82s7r0000gs/T/RankyMcRankFace.jar already exists\n",
+      "Running java -jar /var/folders/33/jx0mw87156q2hmtrr_r82s7r0000gs/T/RankyMcRankFace.jar -ranker 6 -shrinkage 0.1 -metric2t NDCG@10 -tree 50 -bag 1 -leaf 10 -frate 1.0 -srate 1.0 -train /var/folders/33/jx0mw87156q2hmtrr_r82s7r0000gs/T/training.txt -save data/genome_model.txt \n",
+      "Delete model genome: 404\n",
+      "Created Model genome [Status: 201]\n",
+      "Model saved\n"
+     ]
+    }
+   ],
    "source": [
     "from ltr.ranklib import train\n",
     "trainResponse = train(client,\n",
@@ -215,9 +261,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Impact of each feature on the model\n",
+      "title_bm25 - 637582.3838513177\n",
+      "overview_bm25 - 558539.450163617\n",
+      "trainLog Metric 0.6801\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Impact of each feature on the model\")\n",
     "trainLog = trainResponse.trainingLogs[0]\n",
@@ -240,9 +297,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"batman\", \"keywordsList\": [\"batman\"]}, \"model\": \"genome\"}}}\n",
+      "{'size': 5, 'query': {'sltr': {'params': {'keywords': 'batman', 'keywordsList': ['batman']}, 'model': 'genome'}}}\n",
+      "Batman: Under the Red Hood \n",
+      "4.059837 \n",
+      "2010 \n",
+      "['Action', 'Animation'] \n",
+      "Batman faces his ultimate challenge as the mysterious Red Hood takes Gotham City by firestorm. One part vigilante, one part criminal kingpin, Red Hood begins cleaning up Gotham with the efficiency of Batman, but without following the same ethical code. \n",
+      "---------------------------------------\n",
+      "Batman: The Dark Knight Returns, Part 2 \n",
+      "4.0364103 \n",
+      "2013 \n",
+      "['Animation', 'Action'] \n",
+      "Batman has stopped the reign of terror that The Mutants had cast upon his city.  Now an old foe wants a reunion and the government wants The Man of Steel to put a stop to Batman. \n",
+      "---------------------------------------\n",
+      "Batman Returns \n",
+      "4.0364103 \n",
+      "1992 \n",
+      "['Action', 'Crime', 'Fantasy', 'Science Fiction', 'Thriller'] \n",
+      "Having defeated the Joker, Batman now faces the Penguin - a warped and deformed individual who is intent on being accepted into Gotham society. Crooked businessman Max Schreck is coerced into helping him become Mayor of Gotham and they both attempt to expose Batman in a different light. Selina Kyle, Max's secretary, is thrown from the top of a building and is transformed into Catwoman - a mysterious figure who has the same personality disorder as Batman. Batman must attempt to clear his name, all the time deciding just what must be done with the Catwoman. \n",
+      "---------------------------------------\n",
+      "Batman Unmasked: The Psychology of the Dark Knight \n",
+      "4.0364103 \n",
+      "2008 \n",
+      "['Documentary'] \n",
+      "Delve into the world of Batman and the vigilante justice that he brought to the city of Gotham. Batman is a man who, after experiencing great tragedy, devotes his life to an ideal--but what happens when one man takes on the evil underworld alone? Examine why Batman is who he is--and explore how a boy scarred by tragedy becomes a symbol of hope to everyone else. \n",
+      "---------------------------------------\n",
+      "Batman and Robin \n",
+      "3.8168392 \n",
+      "1949 \n",
+      "['Action', 'Science Fiction', 'Thriller'] \n",
+      "This 15-chapter serial pits Batman and Robin against The Wizard, who uses a device that allows him to control machinery to hold the city hostage. \n",
+      "---------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "from ltr import search\n",
     "search(client, \"batman\", modelName='genome')"
@@ -256,7 +352,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -270,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
