--- a/notebooks/opensearch/tmdb/bayesian-optimization.ipynb
+++ b/notebooks/opensearch/tmdb/bayesian-optimization.ipynb
@@ -575,7 +575,7 @@
     "        \n",
     "        # print(json.dumps(query))\n",
     "     \n",
-    "        results = client.es.search(index='tmdb', body=query)\n",
+    "        results = client.opensearch.search(index='tmdb', body=query)\n",
     "        # print(keywords)\n",
     "        # print('-----')\n",
     "        this_keyword_judgments = {judgment['docId']: judgment \n",
